Added InvalidFilterCollectionException class and message
Added InvalidFilterCollectionException class for when a pipeline is instantiated with an invalud FilterCollection for that specific pipeline. Added a message in the resource file that is shown as a message when this exception is thrown.

--- a/SimplePipeline/SimplePipeline/Resources/ExceptionMessagesResources.resx
+++ b/SimplePipeline/SimplePipeline/Resources/ExceptionMessagesResources.resx
@@ -120,4 +120,7 @@
   <data name="ArgumentNullExceptionMessage" xml:space="preserve">
     <value>The following parametercan't be null: "{0}".</value>
   </data>
+  <data name="InvalidFilterCollectionException" xml:space="preserve">
+    <value>The provided FilterCollection is invalid and cannot be used for this pipeline.</value>
+  </data>
 </root>
