--- a/SimplePipeline/SimplePipeline/Resources/ExceptionMessagesResources.resx
+++ b/SimplePipeline/SimplePipeline/Resources/ExceptionMessagesResources.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="InvalidFilterCollectionExceptionMessage" xml:space="preserve">
-    <value>The provided FilterCollection is invalid and cannot be used for this pipeline.</value>
+    <value>The provided FilterCollection cannot be used for this pipeline.</value>
   </data>
   <data name="InvalidFilterExceptionMessage" xml:space="preserve">
     <value>{0} is not assignable from {1}.</value>
