--- a/SimplePipeline/SimplePipeline/Resources/ExceptionMessagesResources.resx
+++ b/SimplePipeline/SimplePipeline/Resources/ExceptionMessagesResources.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="GetGenericFilterExceptionMessage" xml:space="preserve">
+    <value>The provided input or output type do not match those of the underlying filter.</value>
+  </data>
   <data name="InvalidFilterCollectionExceptionMessage" xml:space="preserve">
     <value>The provided FilterCollection cannot be used for this pipeline.</value>
   </data>
